[package]
name = "andromeda-wrapped-cw721"
version = "0.1.0"
authors = ["mdjakovic0920 <mdjakovic0920@gmail.com>"]
edition = "2021"
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# testing = ["cw-multi-test", "andromeda-testing"]
testing = []

[dependencies]
cosmwasm-std = { version = "1.5.2" }
cosmwasm-schema = { version = "1.5.2" }
cw-storage-plus = { version = "1.2.0" }
cw-utils = { version = "1.0.3" }
cw721-base = { version = "0.18.0", features = ["library"] }
cw721 = { version = "0.18.0" }
cw2 = { version = "1.1.2" }
thiserror = { version = "1.0.61" }
schemars = { version = "0.8.21" }

andromeda-std = { version = "1.0.0-rc1" }
andromeda-app = { version = "1.0.0" }
andromeda-non-fungible-tokens = { version = "1.0.0" }
andromeda-finance = { version = "1.0.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-multi-test = { version = "1.0.0", features = ["cosmwasm_1_3"] }
